modified:   app.js new file:   frontend/.env new file:   frontend/.gitignore new file:   frontend/README.md new file:   frontend/package-lock.json new file:   frontend/package.json new file:   frontend/public/favicon.ico new file:   frontend/public/index.html new file:   frontend/public/logo192.png new file:   frontend/public/logo512.png new file:   frontend/public/manifest.json new file:   frontend/public/robots.txt new file:   frontend/src/App.js new file:   frontend/src/index.js new file:   frontend/src/services/APIService.js modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
     background-color: #333;
     border: none;
     border-radius: 10px;
-    color: #da0404;
+    color: #e70303;
     font-size: 18px;
 }
 
@@ -78,7 +78,7 @@ body {
 .button.add {
   padding: 5px 12px;
   margin-left: 15px;
-  background-color: #fd0a0acd;
+  background-color: #f40612;
   color: #030303;
   border: none;
   border-radius: 25px;
@@ -89,6 +89,7 @@ body {
 .button.add:hover {
   background-color: #f40612;
 }
+
 
   
   @media (max-width: 768px) {
@@ -109,7 +110,7 @@ body {
   
     .button {
       padding: 12px 24px;
-      font-size: 16px;
+      font-size: 15px;
     }
   }
   
