--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&family=Ubuntu:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&family=Ubuntu+Mono:wght@700&family=Ubuntu:wght@300;400;700&display=swap');
+@import 'ngx-toastr/toastr';
 
 * {
     margin: 0;
