--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&family=Ubuntu:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&family=Ubuntu+Mono:wght@700&family=Ubuntu:wght@300;400;700&display=swap');
 @import 'ngx-toastr/toastr';
+@import './styles/variables.scss';
 
 * {
     margin: 0;
@@ -11,4 +12,22 @@
 
 html, body {
     height: 100%;
+}
+
+.toast-success{
+    background-color: $secondary-color !important;
+    border-radius: 10px !important;
+  }
+
+.toast-success::after{
+    font: $font-alert !important;
+}
+
+.toast-error{
+    background-color: $dark-color !important;
+    border-radius: 10px !important;
+  }
+
+.toast-error::after{
+    font: $font-alert !important;
 }
