feat: criado service para previnir o usuário de acessar /login ou /register se houver access_token

--- a/src/app/components/login-layout/login-layout.component.scss
+++ b/src/app/components/login-layout/login-layout.component.scss
@@ -18,6 +18,7 @@ main {
     .form-section {
         padding: 0 40px;
         width: 480px;
+        flex-grow: 0.3;
 
         h2 {
             font: $font-title;
