feat: mostrando os filmes disponíveis no banco de dados

--- a/src/app/pages/movies/movies.component.html
+++ b/src/app/pages/movies/movies.component.html
@@ -1,1 +1,15 @@
-<p>movies works!</p>
+<div *ngIf="movies.length > 0">
+    <h2>Movies</h2>
+    <div *ngFor="let movie of movies">
+        <div class="movie">
+            <h2>{{ movie.titulo }}</h2>
+            <p>Diretor: {{ movie.diretor }}</p>
+            <p>{{ movie.descricao }}</p>
+            <p>Lançamento: {{ movie.lancamento }}</p>
+        </div>
+    </div>
+</div>
+
+<div *ngIf="movies.length === 0">
+    <h2>Loading movies...</h2>
+</div>
