--- a/src/app/components/variant-input/variant-input.component.scss
+++ b/src/app/components/variant-input/variant-input.component.scss
@@ -1,24 +1,30 @@
 @import "../../../styles/variables.scss";
 
+
+
 .input-wrapper {
     color: $dark-gray-color;
     text-align: start;
     font: $font-text;
-
-    label {
-        margin-bottom: 10px;
-        color: $gray-color;
-    }
+    display: flex;
 
     .input-content {
-        width: 100%;
-        border-radius: 8px;
+        min-width: 100%;
+        height: 3rem;
+        border-radius: 0.5rem;
         display: flex;
         
         .icon {
-            padding: 12px;
+            padding: 1rem;
+            height: 3rem;
+            width: 3rem;
             background-color: $primary-color;
-            border-radius: 0 8px 8px 0;
+            border-radius: 0 0.5rem 0.5rem 0;
+            border: none;
+            background-repeat: no-repeat;
+            background-position: center;
+            cursor: pointer;
+
 
             img {
                 height: 20px;
@@ -26,22 +32,11 @@
         }
 
         input {
-            border: none;
-            border-radius: 8px 0 0 8px;
-            background-color: $dark-background;
-            padding: 12px 0 12px 20px;
             width: 100%;
-        }
-
-        button {
-            font: $font-text-bold;
             border: none;
-            background-color: transparent;
-            border-radius: 10px;
-            padding: 12px;
-            cursor: pointer;
+            border-radius: 0.5rem 0 0 0.5rem;
+            background-color: $dark-background;
+            padding: 1rem 0 1rem 1.5rem;
         }
-
-        
     }
 }
